Organizando rotas e adicionando README
