# swagger_output.json
@@ -14,7 +14,7 @@
   "consumes": [],
   "produces": [],
   "paths": {
-    "/authenticate": {
+    "/authenticate/": {
       "post": {
         "tags": [],
         "description": "",
@@ -46,7 +46,7 @@
         }
       }
     },
-    "/users": {
+    "/users/": {
       "get": {
         "tags": [],
         "description": "",
@@ -74,7 +74,7 @@
         }
       }
     },
-    "/user/{id}/repos": {
+    "/users/{id}/repos": {
       "get": {
         "tags": [],
         "description": "",
